# lime

./: .ai-code-verify.json  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.en.md  README.md  RELEASE_NOTES.en.md  RELEASE_NOTES.md  a2ui-hitl-mcp-second-turn-eval.json  electron-builder.yml  eslint.config.js  forge.config.mjs  index.html  package-lock.json  package.json  page-routing-state.json  playwright-after-reload-new-chat-boundary.json  playwright-agentui-after-newline-gate-final-20260509.json  playwright-agentui-after-newline-gate-immediate-20260509.json  playwright-agentui-perf-shape-20260509.json  playwright-current-session-debug.json  playwright-deepseek-after-reasoning-fix-20260509.json  playwright-deepseek-perf-20260509.json  playwright-deepseek-perf-after-reasoning-fix-20260509.json  playwright-history-buttons.json  playwright-history-first-image-check.json  playwright-image-flow-state-after-wait.json  playwright-image-flow-state.json  playwright-new-chat-no-leak.json  playwright-second-image-after-reload-final.json  playwright-second-image-after-reload-start.json  playwright-second-image-start.json  pnpm-lock.yaml  snapshot-routing-error.md  tsconfig.electron.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.renderer.json  vite.config.ts
lime-rs/: Cargo.toml  build.rs  install-local.sh  tauri.conf.headless.json  test-tool-call-fix.sh
lime-rs/capabilities/: agent-app-shell.json  default.json  plugin-shell.json
lime-rs/crates/agent/: Cargo.toml
lime-rs/crates/agent-compat/: Cargo.toml
lime-rs/crates/agent-compat/src/: action_required_manager.rs  config.rs  context_mgmt.rs  conversation.rs  lib.rs  mcp_utils.rs  model.rs  prompt_template.rs  reply_provider.rs  sandbox.rs  scheduler.rs  scheduler_trait.rs  session.rs  session_bootstrap.rs  session_context.rs  session_data.rs  session_record.rs  session_store.rs  subagent_session.rs  team_session.rs  thread_runtime.rs  tool.rs  tool_inspection.rs  turn_queue.rs  utils.rs
lime-rs/crates/agent-protocol/: Cargo.toml
lime-rs/crates/agent-protocol/src/: action_required.rs  anthropic.rs  (+11 more)
lime-rs/crates/agent-runtime/: Cargo.toml
lime-rs/crates/app-server/: Cargo.toml
lime-rs/crates/app-server-agent-backend/: Cargo.toml
lime-rs/crates/app-server-client/: Cargo.toml
lime-rs/crates/app-server-daemon/: Cargo.toml
lime-rs/crates/app-server-protocol/: Cargo.toml
lime-rs/crates/app-server-test-client/: Cargo.toml
lime-rs/crates/app-server-transport/: Cargo.toml
lime-rs/crates/core/: Cargo.toml
lime-rs/crates/document-preview/: Cargo.toml
lime-rs/crates/gateway/: Cargo.toml
lime-rs/crates/infra/: Cargo.toml
lime-rs/crates/mcp/: Cargo.toml
lime-rs/crates/media-runtime/: Cargo.toml
lime-rs/crates/model-provider/: Cargo.toml
lime-rs/crates/patch-apply/: Cargo.toml
lime-rs/crates/runtime-core/: Cargo.toml
lime-rs/crates/scheduler/: Cargo.toml
lime-rs/crates/server/: Cargo.toml
lime-rs/crates/services/: Cargo.toml
lime-rs/crates/skills/: Cargo.toml
lime-rs/crates/thread-store/: Cargo.toml
lime-rs/crates/tool-runtime/: Cargo.toml
lime-rs/crates/voice-core/: Cargo.toml  README.md
lime-rs/crates/websocket/: Cargo.toml
lime-rs/src/: dev_bridge.rs  global_shortcut_guard.rs  profiling.rs
lime-rs/src/agent/: README.md  aster_agent.rs  integration.rs  runtime_queue_service.rs
lime-rs/src/agent_tools/: catalog.rs  mod.rs
lime-rs/src/app/: bootstrap.rs  connect_state.rs  mod.rs  model_registry_state.rs  runner.rs  state.rs  telemetry_state.rs  window_chrome.rs
lime-rs/src/commands/: a2ui_form_cmd.rs  agent_app_cmd.rs  agent_cmd.rs  api_key_provider_cmd.rs  automation_cmd.rs  auxiliary_model_selection.rs  capability_draft_cmd.rs  companion_cmd.rs  config_cmd.rs  connect_cmd.rs  context_memory.rs  document_import_cmd.rs  ecommerce_review_reply_cmd.rs  experimental_cmd.rs  external_tools_cmd.rs  file_upload_cmd.rs  gateway_channel_cmd.rs  hotkey_cmd.rs  image_search_cmd.rs  image_upload_cmd.rs  injection_cmd.rs  layered_design_cmd.rs  material_cmd.rs  media_task_cmd.rs  memory_feedback_cmd.rs  memory_search_cmd.rs  mod.rs  model_registry_cmd.rs  models_cmd.rs  persona_cmd.rs  prompt_cmd.rs  site_capability_cmd.rs  skill_cmd.rs  skill_error.rs  skill_exec_cmd.rs  telemetry_cmd.rs  theme_context_cmd.rs  tray_cmd.rs  unified_memory_cmd.rs  update_cmd.rs  (+6 more)
lime-rs/src/dev_bridge/: dispatcher.rs
lime-rs/src/services/: README.md  agent_app_runtime_capability_catalog_service.rs  agent_app_shell_window.rs  agent_timeline_service.rs  artifact_document_validator.rs  artifact_output_schema_service.rs  artifact_prompt_service.rs  artifact_request_metadata_service.rs  browser_connector_guide_window.rs  browser_connector_service.rs  browser_runtime_window.rs  companion_service.rs  file_browser_service.rs  image_search_service.rs  memory_profile_prompt_service.rs  mod.rs  runtime_agent_profile_projection_service.rs  runtime_agents_template_service.rs  runtime_analysis_handoff_service.rs  runtime_evidence_artifact_index_service.rs  runtime_evidence_gap_service.rs  runtime_evidence_json_utils_service.rs  runtime_evidence_markdown_locale_service.rs  runtime_evidence_observability_service.rs  runtime_evidence_pack_output_service.rs  runtime_evidence_pack_service.rs  runtime_evidence_pack_service_tests.rs  runtime_evidence_path_service.rs  runtime_evidence_request_telemetry_service.rs  runtime_evidence_tool_classifier_service.rs  runtime_replay_markdown_locale_service.rs  runtime_review_decision_service.rs  runtime_skill_binding_service_tests.rs  site_adapter_import_service.rs  site_capability_service.rs  skill_service_state.rs  sysinfo_service.rs  update_window.rs  windows_startup_service.rs
lime-rs/src/skills/: README.md  catalog.rs  execution.rs  runtime.rs
lime-rs/src/tray/: manager.rs
lime-rs/src/voice/: README.md  commands.rs  events.rs  fn_shortcut.rs  mod.rs  shortcut.rs
lime-rs/tests/: provider_compact_tool_surface.rs  real_web_search_policy.rs  real_web_search_preflight_short_input.rs
src-tauri/crates/app-server-transport/: Cargo.toml
src-tauri/crates/embedding/: Cargo.toml
(+8835 files in other folders)
