[workspace]
members = ["crates/*"]
exclude = [
  "crates/aster",
  "crates/aster-models",
  "vendor/aster-rust",
  "crates/credential",
]
resolver = "2"

[workspace.package]
version = "1.99.0"
edition = "2021"
authors = ["coso"]
repository = "https://github.com/aiclientproxy/lime"
homepage = "https://github.com/aiclientproxy/lime"

[workspace.dependencies]
# 项目内 crate 依赖
lime-core = { path = "crates/core" }
lime-config = { path = "crates/config" }
lime-infra = { path = "crates/infra" }
lime-providers = { path = "crates/providers" }
lime-services = { path = "crates/services" }
lime-websocket = { path = "crates/websocket" }
lime-processor = { path = "crates/processor" }
lime-server-utils = { path = "crates/server-utils" }
lime-server = { path = "crates/server" }
lime-skills = { path = "crates/skills" }
lime-mcp = { path = "crates/mcp" }
lime-agent = { path = "crates/agent" }
agent-protocol = { path = "crates/agent-protocol" }
agent-runtime = { path = "crates/agent-runtime" }
model-provider = { path = "crates/model-provider" }
thread-store = { path = "crates/thread-store" }
tool-runtime = { path = "crates/tool-runtime" }
lime-scheduler = { path = "crates/scheduler" }
lime-embedding = { path = "crates/embedding", default-features = false }
lime-gateway = { path = "crates/gateway" }
lime-browser-runtime = { path = "crates/browser-runtime" }
lime-media-runtime = { path = "crates/media-runtime" }
runtime-core = { path = "crates/runtime-core" }
lime-knowledge = { path = "crates/knowledge" }
app-server = { path = "crates/app-server" }
app-server-client = { path = "crates/app-server-client" }
app-server-daemon = { path = "crates/app-server-daemon" }
app-server-protocol = { path = "crates/app-server-protocol" }
app-server-test-client = { path = "crates/app-server-test-client" }
app-server-transport = { path = "crates/app-server-transport" }
patch-apply = { path = "crates/patch-apply" }
voice-core = { path = "crates/voice-core" }
document-preview = { path = "crates/document-preview" }
# Agent compat staging - temporary alias for remaining Aster-shaped adapters.
# 退出条件：Phase 6 完成后删除该 alias 和 crates/agent-compat*。
aster = { package = "aster-core", path = "crates/agent-compat" }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_urlencoded = "0.7"

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = "0.43"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"

# HTTP 服务器
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "cors", "timeout"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }

# 数据库
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# 时间和 UUID
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }

# Cron 调度
cron = "0.15"

# 工具库
dirs = "5"
regex = "1"
semver = "1"
md5 = "0.7"
jsonwebtoken = "9.3.1"
hmac = "0.12"
urlencoding = "2"
subtle = "2.5"
flate2 = "1"
tar = "0.4"
fs2 = "0.4"
indexmap = { version = "2", features = ["serde"] }
zip = "0.6"
bzip2 = "0.4"
zstd = "0.13"
dashmap = "5"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
parking_lot = "0.12"
tiktoken-rs = "0.6"
webbrowser = "1.0"
base64 = "0.22"
bytes = "1"
rand = "0.8"
sha2 = "0.10"
open = "5"
url = "2"
once_cell = "1"
arboard = "3"
glob = "0.3.3"
hex = "0.4.3"
etcetera = "0.11.0"
ignore = "0.4.25"
which = "8.0.0"
scopeguard = "1"
sysinfo = "0.32"
whoami = "1"
jsonschema = "0.30.0"

# 音频
cpal = "0.15"

# TLS
rustls-pemfile = "2"

# 终端
portable-pty = "0.8"

# SSH
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# 系统交互
mouse_position = "0.1.4"
window-vibrancy = "0.7.1"
if-addrs = "0.13"
enigo = "0.3"

# MCP (Model Context Protocol)
rmcp = { version = "0.12.0", features = ["auth", "client", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# 测试
proptest = "1"
tempfile = "3"
sacp = "10.0.0"

# Windows 平台依赖
[workspace.dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
]

[workspace.dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "winreg",
    "processthreadsapi",
    "handleapi",
    "shellapi",
    "psapi",
    "tlhelp32",
]

[workspace.dependencies.winreg]
version = "0.52"

# macOS 平台依赖
[workspace.dependencies.block]
version = "0.1"

[workspace.dependencies.cocoa]
version = "0.26"

[workspace.dependencies.objc]
version = "0.2"

[workspace.lints]

[workspace.lints.clippy]
uninlined_format_args = "allow"
string_slice = "warn"
