[package]
name = "agent-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "agent_protocol"
path = "src/lib.rs"
doctest = false

[dependencies]
schemars = { version = "1.2.1", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
