[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "agent_runtime"
path = "src/lib.rs"
doctest = false

[dependencies]
agent-protocol.workspace = true
model-provider.workspace = true
thread-store.workspace = true
tool-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
