[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "agent_runtime"
path = "src/lib.rs"
doctest = false

[dependencies]
agent-protocol.workspace = true
anyhow.workspace = true
futures.workspace = true
model-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
tool-runtime.workspace = true
tokio-util.workspace = true
