[package]
name = "lime-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
agent-protocol.workspace = true
app-server-protocol.workspace = true
agent-runtime.workspace = true
lime-core.workspace = true
lime-mcp.workspace = true
lime-services.workspace = true
lime-providers.workspace = true
lime-skills.workspace = true
model-provider.workspace = true
thread-store.workspace = true
tool-runtime.workspace = true
patch-apply.workspace = true
# Aster runtime compat layer - optional dependency
# 退出条件：aster_runtime_support 迁移到不依赖 Aster 后移除
aster = { workspace = true, optional = true }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true
uuid.workspace = true
thiserror.workspace = true
regex.workspace = true
anyhow.workspace = true
async-stream.workspace = true
url.workspace = true

[features]
# Compat feature：启用 Aster runtime 兼容层
# 退出条件：aster_runtime_support 迁移到不依赖 Aster 后删除
compat-aster = ["aster"]

# Default features：当前保留 compat-aster，确保向后兼容
default = ["compat-aster"]

[dev-dependencies]
tempfile.workspace = true
