[package]
name = "lime-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
agent-protocol.workspace = true
app-server-protocol.workspace = true
agent-runtime.workspace = true
lime-core.workspace = true
lime-mcp.workspace = true
lime-services.workspace = true
lime-skills.workspace = true
model-provider.workspace = true
thread-store.workspace = true
tool-runtime.workspace = true
# Aster runtime compat layer.
# 退出条件：current turn executor / provider stream 接管后移除。
aster.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true
uuid.workspace = true
thiserror.workspace = true
regex.workspace = true
anyhow.workspace = true
async-stream.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
