[package]
name = "app-server-agent-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "app-server-agent-backend"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
aster.workspace = true
lime-agent.workspace = true
lime-core.workspace = true
lime-services.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
