[package]
name = "app-server-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "app_server_daemon"
path = "src/lib.rs"
doctest = false

[dependencies]
app-server-protocol.workspace = true
app-server-transport.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
