[package]
name = "app-server-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "app_server_protocol"
path = "src/lib.rs"
doctest = false

[dependencies]
agent-protocol = { path = "../agent-protocol" }
schemars = { version = "1.2.1", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
