[package]
name = "app-server-test-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "app_server_test_client"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "app-server-test-client"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
app-server-client.workspace = true
app-server-protocol.workspace = true
app-server-transport.workspace = true
serde_json.workspace = true
