[package]
name = "document-preview"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "document_preview"
path = "src/lib.rs"
doctest = false

[dependencies]
flate2.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
