[package]
name = "model-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "model_provider"
path = "src/lib.rs"
doctest = false

[dependencies]
agent-protocol.workspace = true
anyhow.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
