[package]
name = "thread-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "thread_store"
path = "src/lib.rs"
doctest = false

[dependencies]
agent-protocol.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
