[package]
name = "tool-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tool_runtime"
path = "src/lib.rs"
doctest = false

[dependencies]
agent-protocol.workspace = true
chrono.workspace = true
rmcp.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
