[package]
name = "tool-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tool_runtime"
path = "src/lib.rs"
doctest = false

[dependencies]
agent-protocol.workspace = true
chrono.workspace = true
dirs.workspace = true
encoding_rs = "0.8"
lime-core.workspace = true
rmcp.workspace = true
regex.workspace = true
reqwest.workspace = true
scraper = "0.20"
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true
urlencoding.workspace = true
which = "8.0.0"
