[package]
name = "app-server-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "app_server_transport"
path = "src/lib.rs"
doctest = false

[dependencies]
app-server-protocol.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
