[package]
name = "lime-embedding"
version = "0.1.0"
edition = "2021"
authors = ["you"]

[features]
default = []
local-onnx = ["dep:dirs", "dep:fastembed"]

[dependencies]
# HTTP 客户端
reqwest = { version = "0.12", features = ["blocking", "json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 本地 ONNX 嵌入
dirs = { workspace = true, optional = true }
fastembed = { version = "5.13.4", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"], optional = true }

# 错误处理
anyhow = "1"
thiserror = "1"

# 日志
tracing = "0.1"
